deny invalid server & firebase connections (#84)
* create static StatusChecker component

* render clean loading spinner for StatusCheck

* verify working server and firebase configurations before loading app

* add end-to-end tests for working component renders

* add new end-to-end testing in GitHub Actions

* document repository secrets

* edit e2e test workflow yml typo

* add missing uses key to reusable workflow

* fix broken string interpolating in yml workflows

* retry actions

* pass env input to end_to_end

* modify end-to-end test to let page load

* add more e2e tests for errors

* fix end-to-end tests with timeout errors

* fix broken e2e test port

* add e2e server test

* add e2e testing

* add e2e testing

* add e2e testing

* add e2e testing

* pass queue integration tests

* pass match generate test

* pass mutual swipe integration tests

* repair match generator algorithm

* modify e2e test

* pass generate test

* pass server tests

* add linter fixes

* fix match made popop tests

* fix yml typo

* fix yml typo

* modify node verision for server

* modify node verision for server

* wait for root div to load in e2e

* remove docker compose in workflows

* remove server mongodb service in broken action workflow

* remove broken install in server CI

* add container ubuntu to workflow

* tweak docker internal host settings

* swtich mongo memoery version

* add docker install

* add docker install

* add docker install

* fix broken integration tests in GitHub Actions

* fix broken integration tests in GitHub Actions

* tweak e2e testing workflow setup

* increase jest timeout for mongo loading

* fix end-to-end install error w/ pupeterr

* yml typo

* modify puppeteer package

* modify puppeteer package

* modify puppeteer package

* modify puppeteer package

* modify puppeteer package

* modify puppeteer package

* modify puppeteer pack

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,8 +19,27 @@ jobs:
     name: 🧪 Docker CI
     uses: ./.github/workflows/docker_ci.yml
 
-  build_docker_client:
-    needs: [node_ci, docker_ci]
+  # end_to_end_tests:
+  #   name: 🧪 Docker E2E
+  #   uses: ./.github/workflows/end_to_end.yml
+  #   with:
+  #     ENVIRONMENT: production
+  #   secrets:
+  #     NODE_ENV: ${{ secrets.NODE_ENV }}
+  #     SERVER_URL: ${{ secrets.SERVER_URL }}
+  #     PORT: ${{ secrets.PORT }}
+  #     MONGODB_URL: ${{ secrets.MONGODB_URL }}
+  #     SKIP_PREFLIGHT_CHECK: ${{ secrets.SKIP_PREFLIGHT_CHECK }}
+  #     REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+  #     REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+  #     REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+  #     REACT_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+  #     REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+  #     REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+  #     REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
+
+  publish_docker_client:
+    needs: [node_ci, docker_ci, end_to_end_tests]
     name: "🐳 Build/Publish Docker (CLIENT) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -122,8 +141,8 @@ jobs:
           # cache-from: type=local,src=/tmp/.buildx-cache-${{ env.working-directory }}
           # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
-  build_docker_server:
-    needs: [node_ci, docker_ci]
+  publish_docker_server:
+    needs: [node_ci, docker_ci, end_to_end_tests]
     name: "🐳 Build/Publish Docker (SERVER) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -228,7 +247,7 @@ jobs:
           # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
   verify_ec2:
-    needs: [build_docker_server, build_docker_client]
+    needs: [publish_docker_server, publish_docker_client]
     name: ✅ EC2 Verification
     environment: staging
     runs-on: ubuntu-latest
@@ -344,10 +363,10 @@ jobs:
             sudo service docker start
             echo -e "$BLUE Authenticating Docker $NC"
             docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
-            docker run --env-file ./.env -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest
+            docker run --add-host host.docker.internal:host-gateway --env-file ./.env -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest
             echo -e "$BLUE Started up latest Server image $NC"
 
-            docker run -id -p 3000:3000 --env NODE_ENV=$NODE_ENV \
+            docker run --add-host host.docker.internal:host-gateway -id -p 3000:3000 --env NODE_ENV=$NODE_ENV \
             --env SERVER_URL=$SERVER_URL \
             --env PORT=$PORT \
             --env MONGODB_URL=$MONGODB_URL \
