--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -19,3 +19,22 @@ jobs:
   docker_ci:
     name: 🧪 Docker CI
     uses: ./.github/workflows/docker_ci.yml
+
+  # end_to_end_tests:
+  #   name: 🧪 Docker E2E
+  #   uses: ./.github/workflows/end_to_end.yml
+  #   with:
+  #     ENVIRONMENT: development
+  #   secrets:
+  #     NODE_ENV: development
+  #     SERVER_URL: ${{ secrets.SERVER_URL }}
+  #     PORT: ${{ secrets.PORT }}
+  #     MONGODB_URL: ${{ secrets.MONGODB_URL }}
+  #     SKIP_PREFLIGHT_CHECK: ${{ secrets.SKIP_PREFLIGHT_CHECK }}
+  #     REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+  #     REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+  #     REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+  #     REACT_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+  #     REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+  #     REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+  #     REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
