--- a/server/package.json
+++ b/server/package.json
@@ -42,10 +42,11 @@
     "firebase": "^8.10.1",
     "helmet": "^5.0.2",
     "http-status": "^1.5.0",
-    "mongodb-memory-server": "^8.4.2",
+    "mongodb-memory-server-core": "^8.5.2",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "puppeteer": "^13.7.0",
     "socket.io": "^4.4.1",
     "uuid": "8.3.2",
     "winston": "^3.6.0",
