--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -39,7 +39,7 @@ jobs:
   #     REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
 
   publish_docker_client:
-    needs: [node_ci, docker_ci, end_to_end_tests]
+    needs: [node_ci, docker_ci] #end_to_end_tests
     name: "🐳 Build/Publish Docker (CLIENT) Image"
     environment: production
     runs-on: ubuntu-latest
