--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,9 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run dev:client",
+    "production": "dotenv -e ../.env -- webpack serve --config ./webpack.prod.config.js --mode production --host 0.0.0.0 --port 3000",
     "build": "dotenv -e ../.env -- webpack --config ./webpack.prod.config.js --mode production",
-    "dev:client": "webpack serve --config ./webpack.dev.config.js --env development --mode development  --host 0.0.0.0 --port 3000",
+    "dev:client": "webpack serve --config ./webpack.dev.config.js --env development --mode development --host 0.0.0.0 --port 3000",
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch"
   },
