fix CORS error in production (#87)
* test CORS change to production

* also forward PORT 5000 for API

* add proxy to package.josn

* add CORS header to WEBPACK config

* fix yml typo in workflow

* remove CORS header from end-to-end testing webpack config

* add seperate dev build for e2e testing

* use Docker.dev for end-to-end testing

* client tweaks for image file alert

* edit persistent alert message error

* remove TEMP production push

* test production workflow

* test production workflow

* fix broken createNotif reference

* test production workflow

* remove temporary production workflow on dev branch

--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "start": "npm run dev:client",
     "build": "dotenv -e ../.env -- webpack --config ./webpack.prod.config.js --mode production",
-    "dev:client": "webpack serve --config ./webpack.dev.config.js --env development --mode development  --host 0.0.0.0 --port 3000",
+    "ci:build": "dotenv -e ../.env -- webpack --config ./webpack.ci.config.js --mode production",
+    "dev:client": "webpack serve --config ./webpack.dev.config.js --env development --mode development --host 0.0.0.0 --port 3000",
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch"
   },
