--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -385,4 +385,5 @@ jobs:
           procfile: "web: node src/index.js"
         env:
           NODE_ENV: production
-          MONGODB_URL: ${{ secrets.MONGODB_URL }}
+          HD_NODE_ENV: production
+          HD_MONGODB_URL: ${{ secrets.MONGODB_URL }}
