--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,12 +15,31 @@ jobs:
     secrets:
       CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
-  # docker_ci:
-  #   name: 🧪 Docker CI
-  #   uses: ./.github/workflows/docker_ci.yml
+  docker_ci:
+    name: 🧪 Docker CI
+    uses: ./.github/workflows/docker_ci.yml
+
+  # end_to_end_tests:
+  #   name: 🧪 Docker E2E
+  #   uses: ./.github/workflows/end_to_end.yml
+  #   with:
+  #     ENVIRONMENT: production
+  #   secrets:
+  #     NODE_ENV: ${{ secrets.NODE_ENV }}
+  #     SERVER_URL: ${{ secrets.SERVER_URL }}
+  #     PORT: ${{ secrets.PORT }}
+  #     MONGODB_URL: ${{ secrets.MONGODB_URL }}
+  #     SKIP_PREFLIGHT_CHECK: ${{ secrets.SKIP_PREFLIGHT_CHECK }}
+  #     REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+  #     REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+  #     REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+  #     REACT_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+  #     REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+  #     REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+  #     REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
 
   publish_docker_client:
-    needs: [node_ci]
+    needs: [node_ci, docker_ci] #end_to_end_tests
     name: "🐳 Build/Publish Docker (CLIENT) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -123,7 +142,7 @@ jobs:
           # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
   publish_docker_server:
-    needs: [node_ci]
+    needs: [node_ci, docker_ci] # end_to_end_tests
     name: "🐳 Build/Publish Docker (SERVER) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -228,7 +247,7 @@ jobs:
           # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
   verify_ec2:
-    needs: [publish_docker_client]
+    needs: [publish_docker_server, publish_docker_client]
     name: ✅ EC2 Verification
     environment: staging
     runs-on: ubuntu-latest
