heroku backend deployment (#89)
* add Heroku deployment workflow

* modify profile contents for Heroku build

* test only heroku deploy workflow

* update redeploy workflow

* update README instructions

* remove manual port for Heroku start

* tweak heroku deployment

* remove subdir to app

* remove subdir to app

* create Procfile again

* use process.env.PORT for server

* add node engine to package.json

* remove broken dotenv package in production

* add missing joi dependency

* remove broken config for server

* use prefix HD_ for heroku env

* revert .dotenv

* revert .dotenv

* revert .dotenv

* update config settings

* update config settings

* test production deployment

* add npm caching to workflows

* use npm cache for temp workflow

* yml typo

* yml typo

* remove temporary workflow

* delete broken docker files

* delete broken docker files

* revert to npm install

* revert npm install w docker

--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
 
-  client_test:
+  client_build:
     runs-on: ${{ matrix.os }}
     env:
       working-directory: ./client
@@ -22,7 +22,54 @@ jobs:
         node: ['12', '14', '16']
         os: [ubuntu-latest]
 
-    name: 🧑🏻‍💻 Client CI
+    name: 🏗️ Build Client
+    steps:
+      - name: "☁️ Check out Git Repository"
+        uses: actions/checkout@v2
+
+      - name: "⚙️ Generate .env file"
+        run: |
+          cp .env.sample .env
+
+      - name: "🔧 Set up Node"
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+
+      - name: "⚡ Cache node modules"
+        uses: actions/cache@v3
+        id: cache
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      - name: "📦 Install dependencies"
+        #if: steps.cache.outputs.cache-hit != 'true'
+        run: npm install
+
+      - name: "🏗 Build client"
+        working-directory: ${{ env.working-directory }}
+        run: npm run build --if-present
+
+  client_test:
+    needs: [client_build]
+    runs-on: ${{ matrix.os }}
+    env:
+      working-directory: ./client
+    strategy:
+      fail-fast: false
+      matrix:
+        node: ['12', '14', '16']
+        os: [ubuntu-latest]
+
+    name: 🧑🏻‍💻 Test Client
     steps:
       - name: "🎯 Print OS and Node version"
         run: echo "Running on ${{ matrix.os }} with Node v${{ matrix.node }}"
@@ -41,15 +88,20 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - name: "⚡ Cache dependencies"
+      - name: "⚡ Cache node modules"
         uses: actions/cache@v3
-        id: modules-cache
+        id: cache
+        env:
+          cache-name: cache-node-modules
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
 
       - name: "📦 Install dependencies"
-        # if: steps.modules-cache.outputs.cache-hit != 'true'
+        #if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "✅  Run tests"
@@ -72,46 +124,6 @@ jobs:
       #     working-directory: ${{ env.working-directory }}
       #     test-command: "npm run test"
 
-  client_build:
-    runs-on: ${{ matrix.os }}
-    env:
-      working-directory: ./client
-    strategy:
-      fail-fast: false
-      matrix:
-        node: ['12', '14', '16']
-        os: [ubuntu-latest]
-
-    name: 🏗️ Client Build
-    steps:
-      - name: "☁️ Check out Git Repository"
-        uses: actions/checkout@v2
-
-      - name: "⚙️ Generate .env file"
-        run: |
-          cp .env.sample .env
-
-      - name: "🔧 Set up Node"
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-      - name: "⚡ Cache dependencies"
-        uses: actions/cache@v3
-        id: modules-cache
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-
-      - name: "📦 Install dependencies"
-        # if: steps.modules-cache.outputs.cache-hit != 'true'
-        run: npm install
-
-      - name: "🏗 Build client"
-        working-directory: ${{ env.working-directory }}
-        run: npm run build --if-present
-
   server_test:
     runs-on: ${{ matrix.os }}
     env:
@@ -124,7 +136,7 @@ jobs:
         node: ['12'] #, '14', '16']
         os: [ubuntu-latest]
 
-    name: 🗄️ Server CI
+    name: 🗄️ Test Server
     steps:
       - name: "🎯 Print OS and Node version"
         run: echo "Running on ${{ matrix.os }} with Node v${{ matrix.node }}"
@@ -142,16 +154,20 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - name: "⚡ Cache dependencies"
+      - name: "⚡ Cache node modules"
         uses: actions/cache@v3
-        id: modules-cache
+        id: cache
+        env:
+          cache-name: cache-node-modules
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
 
       - name: "📦 Install dependencies"
-        # if: steps.modules-cache.outputs.cache-hit != 'true'
-        # working-directory: ${{ env.working-directory }}
+        #if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "✅  Run tests"
@@ -175,6 +191,7 @@ jobs:
       #     test-command: "npm run test"
 
   end_to_end:
+    needs: [client_test, server_test]
     runs-on: ${{ matrix.os }}
     env:
       client-working-directory: ./client
@@ -188,7 +205,7 @@ jobs:
         node: ['12', '14', '16']
         os: [ubuntu-latest]
 
-    name: End-to-end Testing
+    name: ⚡ E2E Testing
     steps:
       - name: "🍃 Create mongoDB Docker container"
         run: sudo docker run -d -p 27017:27017 mongo:latest
@@ -203,15 +220,20 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - name: "⚡ Cache dependencies"
+      - name: "⚡ Cache node modules"
         uses: actions/cache@v3
-        id: modules-cache
+        id: cache
+        env:
+          cache-name: cache-node-modules
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
 
       - name: "📦 Install dependencies"
-        # if: steps.modules-cache.outputs.cache-hit != 'true'
+        #if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🔧 Create .env file"
@@ -239,7 +261,7 @@ jobs:
     needs: [server_test, client_test]
     runs-on: ubuntu-latest
     environment: ${{ inputs.ENVIRONMENT }}
-    name: Codacy Upload
+    name: 📈 Test Coverage Report
 
     steps:
       - name: "⬇️ Download the client test coverage lcov report"
