--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,9 @@
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch"
   },
+  "engines": {
+    "node": "16.9.1"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,12 +39,14 @@
     "axios": "^0.21.4",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.3.0",
     "firebase": "^8.10.1",
     "helmet": "^5.0.2",
     "http-status": "^1.5.0",
+    "joi": "^17.6.0",
     "mongodb-memory-server-core": "^8.5.2",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
@@ -60,10 +65,8 @@
     "@shelf/jest-mongodb": "^2.2.1",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.4",
-    "dotenv": "^10.0.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.5",
-    "joi": "^17.6.0",
     "supertest": "^6.2.2"
   }
 }
