--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -88,7 +88,7 @@ jobs:
       - name: "📦 Install dependencies"
         # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: |
-          npm install
+          npm install --prefer-offline --no-audit --progress=false
           # su root
           # npm install --unsafe-perm=true --allow-root
 
@@ -216,7 +216,7 @@ jobs:
         working-directory: ./__tests__
         run: |
           su root
-          npm install --unsafe-perm=true --allow-root
+          npm install --prefer-offline --no-audit --progress=false --unsafe-perm=true --allow-root
           npm install puppeteer --unsafe-perm=true --allow-root
 
 
