--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -71,7 +71,7 @@ jobs:
 
       - name: "📦 Install dependencies"
         #if: steps.cache.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm install --prefer-offline --no-audit --progress=false
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -179,7 +179,7 @@ jobs:
 
       - name: "📦 Install dependencies"
         #if: steps.cache.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm install --prefer-offline --no-audit --progress=false
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
