--- a/.github/workflows/redeploy.yml
+++ b/.github/workflows/redeploy.yml
@@ -1,4 +1,4 @@
-name: Redeployment
+name: 🔁 Redeploy App
 
 on:
   workflow_dispatch:
@@ -32,7 +32,7 @@ jobs:
 
       - name: "📦 Install dependencies"
         # if: steps.modules-cache.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm install --prefer-offline --no-audit --progress=false
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -134,7 +134,7 @@ jobs:
 
       - name: "📦 Install dependencies"
         # if: steps.modules-cache.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm install --prefer-offline --no-audit --progress=false
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
